--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,17 @@
     <link rel="stylesheet" href="css/estilod.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>y este es un parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>
+                Este es el titulo del post
+            </h1>
+            <p>
+                y este es el parrafo de inicio 
+                donde van a ir las explicaciones 
+                de las ramas de git 
+            </p>
+        </div>
+    </div>
 </body>
 </html>
