--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,10 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            HYPERBLOG
+            <span id="tagline">
+                Tu blog de COnfianza
+            </span>
         </div>
         <div id="post">
             <h1>
