--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,10 @@
                 donde van a ir las explicaciones 
                 de las ramas de git 
             </p>
+            <p>
+                Los blogs son la mejor forma de compartir infrmacion 
+                ideas y mucho mas. 
+            </p>
         </div>
     </div>
 </body>
