--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="cabecera">
             HYPERBLOG
             <span id="tagline">
-                Tu blog de COnfianza
+                Tu blog de DES_COnfianza
             </span>
         </div>
         <div id="post">
