--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="cabecera">
             HYPERBLOG
             <span id="tagline">
-                Tu blog de COnfianza
+                Tu blog de master
             </span>
         </div>
         <div id="post">
@@ -23,6 +23,9 @@
             <p>
                 Los blogs son la mejor forma de compartir infrmacion 
                 ideas y mucho mas. 
+            </p>
+            <p>
+                Suscribe and like it 
             </p>
         </div>
     </div>
