Casio de titulo desde git
desde internet

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>el titulo del post</title>
+    <title>Titulo editado desde GitHUB</title>
     <link rel="stylesheet" href="css/estilod.css">
 </head>
 <body>
