footer de Juand080501

--- a/blogpost.html
+++ b/blogpost.html
@@ -28,6 +28,11 @@
                 Suscribe and like it 
             </p>
         </div>
+        <div>
+            <div id="footer">
+                Este es el pie de pagina usado para el post WEB desde Juand080501
+            </div>
+        </div>
     </div>
 </body>
 </html>
