--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
                 Este es el titulo del post nuevos
             </h1>
             <p>
-                y este es el párrafo de inicio 
+                y este es el p&aacute;rrafo de inicio 
                 donde van a ir las explicaciones 
                 de las ramas de git 
             </p>
