--- a/blogpost.html
+++ b/blogpost.html
@@ -9,29 +9,29 @@
             <img id="logo" src="imagenes/dragon.png"/>
             HYPERBLOG
             <span id="tagline">
-                Tu blog de DES_COnfianza
+                Tu blog de CONFIANZA
             </span>
         </div>
         <div id="post">
             <h1>
-                Este es el titulo del post nuevos
+                &Eacute;ste es el t&iacute;tulo del post nuevo
             </h1>
             <p>
-                y este es el p&aacute;rrafo de inicio 
+                &eacute;ste es el p&aacute;rrafo de inicio 
                 donde van a ir las explicaciones 
                 de las ramas de git 
             </p>
             <p>
-                Los blogs son la mejor forma de compartir infrmacion 
+                Los blogs son la mejor forma de compartir infrmaci&oacute;n 
                 ideas y mucho mas. 
             </p>
             <p>
-                Suscribe and like it 
+                Suscribe and like it !!
             </p>
         </div>
         <div>
             <div id="footer">
-                Este es el pie de pagina usado para el post WEB desde Juand080501
+                &Eacute;ste es el pie de p&aacute;gina usado para el post WEB desde Juand080501
             </div>
         </div>
     </div>
